@@ -98,7 +98,7 @@ To see a list of available command-line options, start puNES with the `-h` argum
 | 231 | 232 | 233 | 234 | 235 | 236 | 237 | 238 |     | 240 | 241 |
 | 242 | 243 | 244 | 245 | 246 |     | 248 | 249 | 250 |     | 252 |
 | 253 | 254 | 255 | 256 |     | 258 | 259 | 260 | 261 | 262 | 263 |
-| 264 | 265 | 266 | 267 | 268 | 269 |     | 271 |     |     | 274 |
+| 264 | 265 | 266 | 267 | 268 | 269 |     | 271 | 272 |     | 274 |
 |     |     |     |     |     |     | 281 | 282 | 283 | 284 | 285 |
 | 286 | 287 | 288 | 289 | 290 | 291 | 292 |     |     | 295 |     |
 | 297 | 298 | 299 | 300 | 301 | 302 | 303 | 304 | 305 | 306 | 307 |
