@@ -8,7 +8,7 @@ Changelog:
 - Added Polish translation (thx to elektronicznypank).
 - Added fully support to NES 2.0 file cart format header.
 - Rewritten mappers : All.
-- Added support to mapper : 100, 122, 157, 291, 311, 334, 362, 366, 384, 421, 446, 471, 551, 552, 561.
+- Added support to mapper : 100, 122, 157, 272, 291, 311, 334, 362, 366, 384, 421, 446, 471, 551, 552, 561.
 - Added support to UNIF mapper : Transformer, UNROM, AMROM, AOROM, LH09, A60AS, T4A54A, FC-28-5027, 150in1A, 212-HONG-KONG, GKCXIN, 113in1JY110, 820561C, M2C52A, S-2009.
 - Windows x86_64: Update to Qt5 5.15.8 (#279).
 - Fixed map of one keyboard button to multiple controllers (#277).
@@ -19,6 +19,7 @@ Changelog:
   * Linux/BSD - {default system datadir}/puNES
   * Windows - directory where the executable is placed.
   if you want to use a more updated version than the one distributed with the emulator, just copy it either in the executable directory or in the working directory of the emulator, which can also be opened from the "File -> Open working directory" menu.
+- Added full support for Vs System (UniSystem and DualSystem).
 - Rewritten WRAM, VRAM, PRGROM, CHROM and Nametebles management.
 - Rewritten the format and management of save states.
   WARNING save states of version 0.110 or earlier are no longer compatible.
